# botsarlak-core

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATION_GUIDE.md  BOT_FIX_SUMMARY.md  CHANGELOG.md  DOCUMENTATION.md  FINAL_DEPLOYMENT_SUMMARY.md  Makefile  Makefile.production  README.md  REFERRAL_SYSTEM_README.md  ROUTING_MAP.md  VERSION_HISTORY.md  alembic.ini  bot_data.pkl  botsarlak-core.service  check_server_status.sh  check_users.py  create_complete_bot.py  deploy_to_server.sh  docker-compose.production.yml  dual_bot_setup.sh  env.example  env.production  final_comprehensive_check.sh  final_deployment.sh  fix_server_setup.sh  install_deps.exp  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_simple.txt  server_setup.exp  setup_dual_bots.sh  setup_ssh_key.exp  setup_sudo.exp  simple_server_fix.sh  ssh_connect.exp  (+28 more)
.cursor/rules/: 1.mdc
.github/workflows/: ci.yml
app/: bot.py  config.py  constants.py  db.py  keyboards.py  scheduler.py
app/handlers/: admin.py  flashcards.py  league.py  missions.py  profile.py  referrals.py  report.py  start.py
app/models/: flashcards.py  league.py  missions.py  referrals.py  review_calendar.py  study.py  users.py
app/services/: flashcards.py  league.py  notifications.py  reports.py
app/utils/: formatting.py  i18n.py  logger.py  text_splitter.py  time_utils.py
assets/: iran_provinces_cities.json
audit-reports/: audit_report_20251021_145842.md  audit_report_20251021_150350.md  audit_results_20251021_145842.json  audit_results_20251021_150350.json
docs/: AUTO_AUDIT_REPORT_20251021_145846.md  AUTO_AUDIT_REPORT_20251021_150354.md  audit_report_start_profile.md
migrations/: 001_create_tables.sql  002_add_indexes.sql  003_seed_data.sql  env.py
migrations/versions/: 003_version_history.sql  004_user_identity_persistence.sql  005_route_registry_tables.sql  006_audit_logs_table.sql  007_profile_system_tables.sql  008_ai_coach_system_tables.sql  008_fix_users_table_schema.sql  009_onboarding_states_table.sql  009_study_reports_complete.sql  010_anti_fraud_system.sql  010_referral_gamification_system.sql  011_fix_gamification_tables.sql  011_league_system.sql  012_auto_tracking_system.sql  012_qa_system.sql  012_simple_gamification.sql
scripts/: audit_analyzer.py  backup_database.py  bot_health_check.py  check.sh  check_persian_text.py  check_profile_tables.py  check_users_schema.py  check_users_table.py  complete_system_audit.py  continuous_monitor.py  create_admin_profile.py  debug_profile_issue.py  deploy.py  deploy.sh  deploy_qa_system.py  deployment_checklist.py  emergency_fix_users_schema.py  final_complete_test.py  final_profile_test.py  fix_complete_database_schema.py  fix_profile_tables.py  fix_users_table_schema.py  generate_audit_report.py  install.sh  pre_flight_checklist.py  production_deploy.py  setup_audit_tables.py  setup_complete_system.py  setup_profile_tables.py  setup_profile_tables_simple.py  setup_route_tables.py  setup_version_history.py  smoke_test.py  sync_routes.py  test_audit_fixes.py  test_audit_fixes_mock.py  test_bot_callbacks.py  test_bot_profile_functionality.py  test_complete_profile_system.py  test_db_all.py  (+10 more)
src/: config.py  health.py
src/core/: menu_manager.py  performance_optimizer.py  preflight_validator.py  route_registry.py  security_audit.py
src/database/: ai_queries.py  connection.py  profile_queries.py  user_queries.py
src/database/migrations/: 001_initial_schema.sql  002_profile_gamification.sql  003_user_goals.sql  runner.py
src/handlers/: profile_creation_handler.py  start.py  start_handler.py
src/handlers/admin/: handler.py  menu_admin.py  ops_handler.py  texts_fa.py
src/handlers/ai_coach/: __init__.py  ai_coach_integration.py  analytics_handler.py  coach_handler.py  recommendations_handler.py  schedule_handler.py
src/handlers/league/: league_handler.py
src/handlers/main_menu/: handler.py  study_methods.py
src/handlers/onboarding/: __init__.py  handler.py  onboarding_handler.py  state.py  texts_fa.py
src/handlers/profile/: profile_handler_v3.py
src/handlers/qa/: qa_handler.py
src/handlers/referral/: handler.py
src/handlers/report/: report_handler.py
src/monitoring/: __init__.py  system_monitor.py
src/sarlakbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: ai_coach_service.py  anti_fraud_service.py  auto_tracking_service.py  gamification_service.py  league_service.py  profile_service.py  qa_service.py  referral_service.py  report_service.py  token_service.py  user_learning_service.py  user_profile_service.py
src/utils/: error_handler.py  gauges.py  i18n_system.py  ids.py  input_validator.py  logging.py  monitoring.py  navigation.py  text_utils.py
tests/: __init__.py  test_basic.py  test_route_registry.py
